// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autocomplete.ts should render component and match snapshot 1`] = `
<div class="input autocomplete"><label id="label-1" for="autocomplete-1" aria-hidden="false" class="label">
    <div class="label__wrapper">
      <div class="label__content__wrapper">
        <div class="label__content">Default</div>
      </div>
      <!---->
    </div>
  </label>
  <!---->
  <div class="input__control input__control--has-append autocomplete__control">
    <!---->
    <!----><input id="autocomplete-1" class="input__input autocomplete__input" placeholder="Default" type="text" inputmode="text" autocomplete="off" aria-haspopup="true">
    <!---->
    <!---->
    <!----><button class="icon icon--link focus:outline-none origin-center transform transition-transform duration-200 ease-in-out text-blue-500 hover:text-blue-400 focus:text-blue-400" role="button" aria-hidden="false" tabindex="-1"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24px" width="24px" role="img" aria-hidden="true" style="font-size: 24px; height: 24px; width: 24px;">
        <g fill="currentColor">
          <path d="m7.5 8.25 6 6-1.5 1.5-6-6 1.5-1.5zM18 9.75l-6 6-1.5-1.5 6-6 1.5 1.5z"></path>
        </g>
      </svg></button>
    <!---->
  </div><span class="menu"><!----><!----></span>
</div>
`;

exports[`Autocomplete.ts should render component with dense prop and match snapshot 1`] = `
<div class="input autocomplete"><label id="label-1" for="autocomplete-1" aria-hidden="false" class="label">
    <div class="label__wrapper">
      <div class="label__content__wrapper">
        <div class="label__content">Default</div>
      </div>
      <!---->
    </div>
  </label>
  <!---->
  <div class="input__control input__control--has-append autocomplete__control">
    <!---->
    <!----><input id="autocomplete-1" class="input__input input__input--dense autocomplete__input" placeholder="Default" type="text" inputmode="text" autocomplete="off" aria-haspopup="true">
    <!---->
    <!---->
    <!----><button class="icon icon--link focus:outline-none origin-center transform transition-transform duration-200 ease-in-out text-blue-500 hover:text-blue-400 focus:text-blue-400" role="button" aria-hidden="false" tabindex="-1"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24px" width="24px" role="img" aria-hidden="true" style="font-size: 24px; height: 24px; width: 24px;">
        <g fill="currentColor">
          <path d="m7.5 8.25 6 6-1.5 1.5-6-6 1.5-1.5zM18 9.75l-6 6-1.5-1.5 6-6 1.5 1.5z"></path>
        </g>
      </svg></button>
    <!---->
  </div><span class="menu"><!----><!----></span>
</div>
`;

exports[`Autocomplete.ts should render component with disabled prop and match snapshot, should not open menu 1`] = `
<div class="input input--disabled autocomplete"><label id="label-1" for="autocomplete-1" aria-hidden="false" class="label">
    <div class="label__wrapper">
      <div class="label__content__wrapper">
        <div class="label__content">Default</div>
      </div>
      <!---->
    </div>
  </label>
  <!---->
  <div class="input__control input__control--has-append autocomplete__control">
    <!---->
    <!----><input id="autocomplete-1" class="input__input autocomplete__input" placeholder="Default" type="text" inputmode="text" autocomplete="off" aria-haspopup="true" disabled="">
    <!---->
    <!---->
    <!----><button class="icon icon--link focus:outline-none origin-center transform transition-transform duration-200 ease-in-out text-gray-400 cursor-not-allowed" role="button" aria-hidden="false" tabindex="-1" disabled=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24px" width="24px" role="img" aria-hidden="true" style="font-size: 24px; height: 24px; width: 24px;">
        <g fill="currentColor">
          <path d="m7.5 8.25 6 6-1.5 1.5-6-6 1.5-1.5zM18 9.75l-6 6-1.5-1.5 6-6 1.5 1.5z"></path>
        </g>
      </svg></button>
    <!---->
  </div><span class="menu"><!----><!----></span>
</div>
`;

exports[`Autocomplete.ts should render component with loading prop and match snapshot 1`] = `
<div class="input autocomplete"><label id="label-1" for="autocomplete-1" aria-hidden="false" class="label">
    <div class="label__wrapper">
      <div class="label__content__wrapper">
        <div class="label__content">Default</div>
      </div>
      <!---->
    </div>
  </label>
  <!---->
  <div class="input__control input__control--has-append autocomplete__control">
    <!---->
    <!----><input id="autocomplete-1" class="input__input autocomplete__input" placeholder="Default" type="text" inputmode="text" autocomplete="off" aria-haspopup="true">
    <!---->
    <!---->
    <!----><button class="icon icon--link focus:outline-none origin-center transform transition-transform duration-200 ease-in-out text-blue-500 hover:text-blue-400 focus:text-blue-400" role="button" aria-hidden="false" tabindex="-1"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24px" width="24px" role="img" aria-hidden="true" style="font-size: 24px; height: 24px; width: 24px;">
        <g fill="currentColor">
          <path d="m7.5 8.25 6 6-1.5 1.5-6-6 1.5-1.5zM18 9.75l-6 6-1.5-1.5 6-6 1.5 1.5z"></path>
        </g>
      </svg></button>
    <!---->
  </div><span class="menu"><!----><!----></span>
</div>
`;

exports[`Autocomplete.ts should render component with name, required, readonly props and match snapshot, should not open menu 1`] = `
<div class="input input--focused autocomplete"><label id="label-1" for="autocomplete-1" aria-hidden="false" class="label">
    <div class="label__wrapper">
      <div class="label__content__wrapper">
        <div class="label__content">Default</div>
      </div>
      <!---->
    </div>
  </label>
  <!---->
  <div class="input__control input__control--has-append autocomplete__control autocomplete__control--is-active">
    <!---->
    <!----><input id="autocomplete-1" class="input__input autocomplete__input" name="text-field-name" required="" placeholder="Default" type="text" inputmode="text" autocomplete="off" aria-haspopup="true" readonly="">
    <!---->
    <!---->
    <!----><button class="icon icon--link focus:outline-none origin-center transform transition-transform duration-200 ease-in-out text-blue-500 hover:text-blue-400 focus:text-blue-400" role="button" aria-hidden="false" tabindex="-1"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24px" width="24px" role="img" aria-hidden="true" style="font-size: 24px; height: 24px; width: 24px;">
        <g fill="currentColor">
          <path d="m7.5 8.25 6 6-1.5 1.5-6-6 1.5-1.5zM18 9.75l-6 6-1.5-1.5 6-6 1.5 1.5z"></path>
        </g>
      </svg></button>
    <!---->
  </div><span class="menu"><!----><!----></span>
</div>
`;

exports[`Autocomplete.ts should render component with singleLine prop and match snapshot 1`] = `
<div class="input autocomplete">
  <!---->
  <!---->
  <div class="input__control input__control--has-append autocomplete__control">
    <!---->
    <!----><input id="autocomplete-1" class="input__input autocomplete__input" placeholder="Default" type="text" inputmode="text" autocomplete="off" aria-haspopup="true">
    <!---->
    <!---->
    <!----><button class="icon icon--link focus:outline-none origin-center transform transition-transform duration-200 ease-in-out text-blue-500 hover:text-blue-400 focus:text-blue-400" role="button" aria-hidden="false" tabindex="-1"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24px" width="24px" role="img" aria-hidden="true" style="font-size: 24px; height: 24px; width: 24px;">
        <g fill="currentColor">
          <path d="m7.5 8.25 6 6-1.5 1.5-6-6 1.5-1.5zM18 9.75l-6 6-1.5-1.5 6-6 1.5 1.5z"></path>
        </g>
      </svg></button>
    <!---->
  </div><span class="menu"><!----><!----></span>
</div>
`;

exports[`Autocomplete.ts should render component with slots and match snapshot 1`] = `
<div class="input autocomplete">
  <!---->
  <!---->
  <div class="input__control input__control--has-prepend input__control--has-append autocomplete__control">
    <!---->
    <div class="flex items-center flex-shrink-0"><i class="icon text-gray-200 dark:text-gray-300" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24px" width="24px" role="img" aria-hidden="true" style="font-size: 24px; height: 24px; width: 24px;">
          <g fill="currentColor">
            <path d="prepend-icon"></path>
          </g>
        </svg></i>Prepend slot</div><input id="autocomplete-1" class="input__input autocomplete__input" type="text" inputmode="text" autocomplete="off" aria-haspopup="true">
    <div class="flex items-center flex-shrink-0">Append slot<i class="icon text-gray-200 dark:text-gray-300" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24px" width="24px" role="img" aria-hidden="true" style="font-size: 24px; height: 24px; width: 24px;">
          <g fill="currentColor">
            <path d="append-icon"></path>
          </g>
        </svg></i></div>
    <!---->
    <!----><button class="icon icon--link focus:outline-none origin-center transform transition-transform duration-200 ease-in-out text-blue-500 hover:text-blue-400 focus:text-blue-400" role="button" aria-hidden="false" tabindex="-1"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24px" width="24px" role="img" aria-hidden="true" style="font-size: 24px; height: 24px; width: 24px;">
        <g fill="currentColor">
          <path d="m7.5 8.25 6 6-1.5 1.5-6-6 1.5-1.5zM18 9.75l-6 6-1.5-1.5 6-6 1.5 1.5z"></path>
        </g>
      </svg></button>
    <!---->
  </div><span class="menu"><!----><!----></span>
</div>
`;

exports[`Autocomplete.ts should render component with solo prop and match snapshot 1`] = `
<div class="input autocomplete">
  <!---->
  <!---->
  <div class="input__control input__control--solo input__control--has-append autocomplete__control">
    <!---->
    <!----><input id="autocomplete-1" class="input__input input__input--dense autocomplete__input" placeholder="Default" type="text" inputmode="text" autocomplete="off" aria-haspopup="true">
    <!---->
    <!---->
    <!----><button class="icon icon--link focus:outline-none origin-center transform transition-transform duration-200 ease-in-out text-blue-500 hover:text-blue-400 focus:text-blue-400" role="button" aria-hidden="false" tabindex="-1"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24px" width="24px" role="img" aria-hidden="true" style="font-size: 24px; height: 24px; width: 24px;">
        <g fill="currentColor">
          <path d="m7.5 8.25 6 6-1.5 1.5-6-6 1.5-1.5zM18 9.75l-6 6-1.5-1.5 6-6 1.5 1.5z"></path>
        </g>
      </svg></button>
    <!---->
  </div><span class="menu"><!----><!----></span>
</div>
`;

exports[`Autocomplete.ts should render items on focused and match snapshot 1`] = `undefined`;

exports[`Autocomplete.ts should render items on focused and match snapshot 2`] = `
<div class="input input--focused autocomplete"><label id="label-1" for="autocomplete-1" aria-hidden="false" class="label">
    <div class="label__wrapper">
      <div class="label__content__wrapper">
        <div class="label__content">Default</div>
      </div>
      <!---->
    </div>
  </label>
  <!---->
  <div class="input__control input__control--has-append autocomplete__control autocomplete__control--is-active">
    <!---->
    <!----><input id="autocomplete-1" class="input__input autocomplete__input" placeholder="Default" type="text" inputmode="text" autocomplete="off" aria-haspopup="true">
    <!---->
    <!---->
    <!----><button class="icon icon--link focus:outline-none origin-center transform transition-transform duration-200 ease-in-out text-blue-500 hover:text-blue-400 focus:text-blue-400" role="button" aria-hidden="false" tabindex="-1"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24px" width="24px" role="img" aria-hidden="true" style="font-size: 24px; height: 24px; width: 24px;">
        <g fill="currentColor">
          <path d="m7.5 8.25 6 6-1.5 1.5-6-6 1.5-1.5zM18 9.75l-6 6-1.5-1.5 6-6 1.5 1.5z"></path>
        </g>
      </svg></button>
    <!---->
  </div><span class="menu"><!----><!----></span>
</div>
`;
